--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -2,15 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+/* html {
   scrollbar-gutter: stable;
-}
+} */
 
 html,
 body {
   width: 100%;
   min-height: 100vh;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 #root {
@@ -97,4 +97,67 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.vertical-timeline-element-content {
+  position: relative;
+  margin-left: 20px !important;
+  background: rgb(255 255 255 / 0.5) !important;
+  border-radius: 0.25em;
+  padding: 1em;
+  box-shadow: none !important;
+}
+
+.vertical-timeline {
+  width: 87% !important;
+  max-width: 1170px !important;
+  margin: 0 auto !important;
+  position: relative !important;
+  padding: 2em 0 !important;
+  float: right !important;
+}
+
+.vertical-timeline:before {
+  content: "" !important;
+  position: absolute !important;
+  top: 20px !important;
+  left: -25px !important;
+  height: 98% !important;
+  width: 4px !important;
+  background: rgb(255 255 255 / 0.5) !important;
+}
+
+.vertical-timeline-element-icon {
+  position: absolute !important;
+  top: 3% !important;
+  left: -4% !important;
+  width: 30px !important;
+  height: 3px !important;
+  border-radius: 0px !important;
+  border: 1px solid rgba(255, 255, 255, 1) !important;
+  box-shadow: none !important;
+}
+
+@media screen and (max-width: 650px) {
+  .vertical-timeline-element-icon {
+    left: -6% !important;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .vertical-timeline-element-icon {
+    left: -8% !important;
+  }
+}
+
+.apexcharts-legend {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+.apexcharts-legend-series {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  font-size: 16px;
 }
