--- a/src/components/home/styles.module.css
+++ b/src/components/home/styles.module.css
@@ -1,36 +1,20 @@
 .cardBgTop {
   background: rgb(192, 120, 37);
-  background: linear-gradient(
-    0deg,
-    rgba(192, 120, 37, 0.4) 0%,
-    rgba(255, 255, 255, 0) 100%
-  );
+  background: linear-gradient(0deg, #1e293b 0%, rgba(255, 255, 255, 0) 100%);
 }
 
 .cardBgBottom {
   background: rgb(192, 120, 37);
-  background: linear-gradient(
-    180deg,
-    rgba(192, 120, 37, 0.3) 0%,
-    rgba(255, 255, 255, 0) 30%
-  );
+  background: linear-gradient(180deg, #1e293b 0%, rgba(255, 255, 255, 0) 30%);
 }
 
 .cardBgLeft {
   background: rgb(192, 120, 37);
-  background: linear-gradient(
-    90deg,
-    rgba(192, 120, 37, 0.3) 0%,
-    rgba(255, 255, 255, 0) 30%
-  );
+  background: linear-gradient(90deg, #1e293b 0%, rgba(255, 255, 255, 0) 30%);
 }
 .cardBgRight {
   background: rgb(192, 120, 37);
-  background: linear-gradient(
-    270deg,
-    rgba(192, 120, 37, 0.3) 0%,
-    rgba(255, 255, 255, 0) 30%
-  );
+  background: linear-gradient(270deg, #1e293b 0%, rgba(255, 255, 255, 0) 30%);
 }
 
 .titleShadow {
