--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -99,7 +99,7 @@ body {
 .vertical-timeline-element-content {
   position: relative;
   margin-left: 20px !important;
-  background: rgba(0, 0, 0, 0.5) !important;
+  background: rgba(255, 255, 255, 0.1) !important;
 
   border-radius: 0.25em;
   padding: 1em;
@@ -122,7 +122,7 @@ body {
   left: -25px !important;
   height: 98% !important;
   width: 4px !important;
-  background: rgba(254, 254, 254, 0.5) !important;
+  background: rgba(254, 254, 254, 0.1) !important;
 }
 
 .vertical-timeline-element-icon {
@@ -132,7 +132,7 @@ body {
   width: 30px !important;
   height: 2px !important;
   border-radius: 0px !important;
-  border: 1px solid rgb(255, 255, 255) !important;
+  border: 1px solid rgba(254, 254, 254, 0.1) !important;
   box-shadow: none !important;
 }
 
