--- a/src/components/home/styles.module.css
+++ b/src/components/home/styles.module.css
@@ -1,20 +1,20 @@
 .cardBgTop {
   background: rgb(0, 0, 0);
-  background: linear-gradient(0deg, #0b0b0b 0, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(0deg, #111 0, rgba(255, 255, 255, 0) 100%);
 }
 
 .cardBgBottom {
   background: rgb(0, 0, 0);
-  background: linear-gradient(180deg, #0b0b0b 0, rgba(255, 255, 255, 0) 30%);
+  background: linear-gradient(180deg, #111 0, rgba(255, 255, 255, 0) 30%);
 }
 
 .cardBgLeft {
   background: rgb(0, 0, 0);
-  background: linear-gradient(90deg, #0b0b0b 0, rgba(255, 255, 255, 0) 30%);
+  background: linear-gradient(90deg, #111 0, rgba(255, 255, 255, 0) 30%);
 }
 .cardBgRight {
   background: rgb(0, 0, 0);
-  background: linear-gradient(270deg, #0b0b0b 0, rgba(255, 255, 255, 0) 30%);
+  background: linear-gradient(270deg, #111 0, rgba(255, 255, 255, 0) 30%);
 }
 
 .titleShadow {
