--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -5,6 +8,8 @@
 :root {
   --logoGold: #fec057;
   --logoGold100: #f8d664cc;
+  --raleway: "Raleway", "sans-serif";
+  --geist: "Geist", "sans-serif";
 }
 html {
   scroll-behavior: smooth;
